LIBS=""
AM_LDFLAGS = -static-libtool-libs
lib_LTLIBRARIES=libbuild.la
libbuild_la_SOURCES=ksb_config.cpp \
					ksb_auction.cpp \
					ksb_parser.cpp \
					ksb_result.cpp \
					ksb_helper.cpp \
					ksb_ws.cpp \
					ksb_stopword.cpp \
					match_tree.cpp \
                     $(NULL)

libbuild_la_LIBADD=
