AM_LDFLAGS=-static-libtool-libs
lib_LTLIBRARIES=libsearch.la
libsearch_la_SOURCES=AndExecutor.cpp \
			AttrFilter.cpp \
			BitAttrFilter.cpp \
			UBitAttrFilter.cpp \
			PromotionAttrFilter.cpp \
			ZKGroupAttrFilter.cpp \
			LatLngAttrFilter.cpp \
			ProvCityAttrFilter.cpp \
			DoubleAttrFilter.cpp \
			Executor.cpp \
			FloatAttrFilter.cpp \
			IntAttrFilter.cpp \
			NotExecutor.cpp \
			OrExecutor.cpp \
			PostExecutor.cpp \
			PhraseExecutor.cpp \
			FilterInterface.cpp \
			FilterFactory.cpp \
			StringAttrFilter.cpp \
			UIntAttrFilter.cpp \
			Search.cpp \
			CfgManager.cpp \
			OccWeightCalculator.cpp \
			OccPostExecutor.cpp \
			OccFilter.cpp \
			SinglePostExecutor.cpp \
			OccSinglePostExecutor.cpp \
			$(NULL)
