SUBDIRS=

commdefincludedir=$(includedir)/commdef

commdefinclude_HEADERS=commdef.h \
					   DocMessage.pb.h \
					   DocMessage.proto \
					   DocIndexMessage.pb.h \
					   DocIndexMessage.proto \
					   ClusterResult.h \
					   SearchResult.h \
					   SourceFilter.h \
					   KSResult.pb.h \
					   KSResult.proto \
					   TokenizerFactory.h \
                    $(NULL)
